--- a/tox.ini
+++ b/tox.ini
@@ -1,22 +1,6 @@
 [tox]
-envlist = py36, py35, flake8
-
-[testenv:flake8]
-basepython=python
-deps=flake8
-commands=flake8 full_async_web_app_example
+envlist=py27,py34,py35
 
 [testenv]
-setenv =
-    PYTHONPATH = {toxinidir}:{toxinidir}/full_async_web_app_example
-deps =
-    -r{toxinidir}/requirements_dev.txt
-commands =
-    pip install -U pip
-    py.test --basetemp={envtmpdir}
-
-
-; If you want to make tox run the tests with the same versions, create a
-; requirements.txt with the pinned versions and uncomment the following lines:
-; deps =
-;     -r{toxinidir}/requirements.txt
+commands=py.test full_async_web_app_example
+deps=pytest
